JDK21 Migration: Adding some changes suitable for the convention of JDK21 and updating few build scripts